tests/models/snapshots/organisations/can_delete_by_id@orgs.snap
---
source: tests/models/orgs.rs
assertion_line: 113
expression: result
---
Ok(
    PgQueryResult {
        rows_affected: 1,
    },
)
