tests/models/snapshots/organisations/can_fetch_all@orgs.snap
---
source: tests/models/orgs.rs
assertion_line: 67
expression: result
---
Ok(
    [
        Organisation {
            id: 1,
            pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            name: "Acme Corp",
            address: Some(
                "123 Acme St, Nairobi, NY",
            ),
            phone: Some(
                "777-1234-5678",
            ),
            email: Some(
                "acme@corp.org",
            ),
            subscription_type: Some(
                Basic,
            ),
            created_at: 2024-12-21T10:00:00+00:00,
            updated_at: 2024-12-21T10:00:00+00:00,
        },
        Organisation {
            id: 2,
            pid: 4a93f0a8-4a91-482d-92d8-f0b3b084c2e4,
            name: "Globex Corporation",
            address: Some(
                "456 Globex Blvd, Eldoret, CA",
            ),
            phone: Some(
                "777-2341-7892",
            ),
            email: Some(
                "globex@corp.org",
            ),
            subscription_type: Some(
                Business,
            ),
            created_at: 2024-12-20T12:30:00+00:00,
            updated_at: 2024-12-21T08:00:00+00:00,
        },
        Organisation {
            id: 3,
            pid: 4a0f3af9-e56e-4e21-8f3a-f9e56efe215b,
            name: "Inter-continental Industries",
            address: Some(
                "325 Four-Seasons Avenue, Kericho, TX",
            ),
            phone: Some(
                "777-1567-2345",
            ),
            email: Some(
                "inter@continental.org",
            ),
            subscription_type: Some(
                Enterprise,
            ),
            created_at: 2024-12-20T12:30:00+00:00,
            updated_at: 2024-12-21T08:00:00+00:00,
        },
    ],
)
