tests/models/snapshots/organisations/can_fetch_by_id@orgs.snap
---
source: tests/models/orgs.rs
assertion_line: 84
expression: result
---
Ok(
    Organisation {
        id: 101,
        pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
        name: "Acme Corp",
        address: Some(
            "123 Acme St, Nairobi, NY",
        ),
        phone: Some(
            "777-1234-5678",
        ),
        email: Some(
            "acme@corp.org",
        ),
        subscription_type: Some(
            Basic,
        ),
        created_at: 2024-12-21T10:00:00+00:00,
        updated_at: 2024-12-21T10:00:00+00:00,
    },
)
